--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,7 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "ENV_VARIABLE_1=${{ secrets.ENV_VARIABLE_1 }}" >> .env
-          echo "ENV_VARIABLE_2=${{ secrets.ENV_VARIABLE_2 }}" >> .env
+          echo "ENV_VARIABLES=${{ secrets.ENV_VARIABLEs }}" >> .env
 
       - name: Show .env file
         run: cat .env
