--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "ENV_VARIABLES=${{ secrets.ENV_VARIABLEs }}" >> .env
+          echo "ENV_VARIABLES=${{ secrets.ENV_VARIABLES }}" >> .env
 
       - name: Show .env file
         run: cat .env
